--- a/week4/day4/excersicesXp/index.html
+++ b/week4/day4/excersicesXp/index.html
@@ -9,38 +9,25 @@
 <body>
     <script src="script.js"></script>
 
-    <!-- 🌟 Exercise 1 : Information
-Instructions
-Part I : function with no parameters
-
-Create a function called infoAboutMe() that takes no parameter.
-The function should console.log a sentence about you (ie. your name, age, hobbies ect…).
-Call the function. -->
-
-<!-- Part II : function with three parameters
-
-Create a function called infoAboutPerson(personName, personAge, personFavoriteColor) that takes 3 parameters.
-The function should console.log a sentence about the person (ie. “You name is …, you are .. years old, your favorite color is …”)
-Call the function twice with the following arguments:
-infoAboutPerson("David", 45, "blue")
-infoAboutPerson("Josh", 12, "yellow") -->
-
-<!-- Exercise 2 : Tips
-Instructions
-John created a simple tip calculator to help calculate how much to tip when he and his family go to restaurants.
-
-Create a function named calculateTip() that takes no parameter.
-
-Inside the function, use prompt to ask John for the amount of the bill.
-
-Here are the rules
-If the bill is less than $50, tip 20%.
-If the bill is between $50 and $200, tip 15%.
-If the bill is more than $200, tip 10%.
-
-Console.log the tip amount and the final bill (bill + tip).
-
-Call the calculateTip() function. -->
+    <h1>Vacation Cost Calculator</h1>
+    <form onsubmit="calculateCost(event)">
+      <label for="hotelNights">Number of Hotel Nights:</label>
+      <input type="text" id="hotelNights" name="hotelNights" required>
+      <br>
+      <label for="carDays">Number of Car Rental Days:</label>
+      <input type="text" id="carDays" name="carDays" required>
+      <br>
+      <label for="destination">Destination:</label>
+      <select id="destination" name="destination" required>
+        <option value="">Select a destination</option>
+        <option value="London">London</option>
+        <option value="Paris">Paris</option>
+        <option value="Other">Other</option>
+      </select>
+      <br>
+      <button type="submit">Calculate Total Cost</button>
+    </form>
+    <div id="result"></div>
     
 </body>
 </html>
