--- a/week5/day2/index.html
+++ b/week5/day2/index.html
@@ -3,10 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+
+    <!-- exercise 1 -->
+<!-- <div id="container">Users:</div>
+<ul class="list">
+    <li>John</li>
+    <li>Pete</li>
+</ul>
+<ul class="list">
+    <li>David</li>
+    <li>Sarah</li>
+    <li>Dan</li>
+</ul> -->
+
+<!-- exercise 2 -->
+
+<!-- <div>Users:</div>
+<ul>
+    <li>John</li>
+    <li>Pete</li>
+</ul> -->
+
+
+<!-- exercise 3 -->
+<!-- <div id="navBar">
+    <ul>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">My Friends</a></li>
+        <li><a href="#">Messenger</a></li>
+        <li><a href="#">My Pics</a></li>
+    </ul>
+</div> -->
+
+<!-- exercise 4 -->
+
+<div class="list-books"></div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
