--- a/week5/day2/index.html
+++ b/week5/day2/index.html
@@ -43,7 +43,7 @@
 
 <!-- exercise 4 -->
 
-<div class="list-books"></div>
+<!-- <div class="list-books"></div> -->
 
 
     <script src="script.js"></script>
