--- a/week5/day5/drumset/index.html
+++ b/week5/day5/drumset/index.html
@@ -13,15 +13,15 @@
     
     <img src="foto_concierto.jpg" id="imagen" alt="">
     <!-- <audio src="" controls></audio> -->
-        <p id="uno" onclick="playSound2('uno')">A Boot</p>
-        <p id="dos" onclick="playSound2('dos')">S Clap</p>
-        <p id="tres" onclick="playSound2('tres')">D HiHat</p>
-        <p id="cuatro" onclick="playSound2('cuatro')">F Kick</p>
-        <p id="cinco" onclick="playSound2('cinco')">G OpenHot</p>
-        <p id="seis" onclick="playSound2('seis')">H Ride</p>
-        <p id="siete" onclick="playSound2('siete')">J Snore</p>
-        <p id="ocho" onclick="playSound2('ocho')">K Link</p>
-        <p id="nueve" onclick="playSound2('nueve')">L Ton</p>
+        <p id="uno">A Boot</p>
+        <p id="dos">S Clap</p>
+        <p id="tres">D HiHat</p>
+        <p id="cuatro">F Kick</p>
+        <p id="cinco">G OpenHot</p>
+        <p id="seis">H Ride</p>
+        <p id="siete">J Snore</p>
+        <p id="ocho">K Link</p>
+        <p id="nueve">L Ton</p>
         </span>
         <audio id="myAudio" autoplay>
 
