--- a/week7/day2/exerciseXpGold/index.html
+++ b/week7/day2/exerciseXpGold/index.html
@@ -7,11 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- exercise 1
     <input type="number" id="numeros"> 
     <button type="button" id="boton">Intro</button>  Enter numbers to add
     <p></p>
     <button type="button" id="sumaTodo">suma todos los numeros</button>
-    <p id="demo"></p>
+    <p id="demo"></p> -->
+
+    <!-- exercise 2 -->
     <script src="script.js"></script>
 </body>
 </html>
