--- a/week8/day3/index.html
+++ b/week8/day3/index.html
@@ -220,7 +220,11 @@
 // let dog2 = new Animal("Larry")
 // dog2.speak()
 
-
+class example {
+    constructor(number){
+        this
+    }
+}
 
                 
 
