--- a/week9/day5/miniProyect/index.html
+++ b/week9/day5/miniProyect/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
+
 </head>
 <body>
     <div class="container">
@@ -14,7 +15,7 @@
           <input type="text" id="cityInput" placeholder="Enter a city...">
           <button type="submit">Submit</button>
         </form>
-        <div id="weatherCard" class="weather-card-hide">
+        <div id="weatherCard" class="weather-card hide">
           <h2 id="cityName"></h2>
           <h3 id="countryName"></h3>
           <div id="weatherInfo">
@@ -30,26 +31,30 @@
         <h2>Previous Searches</h2>
         <ul id="previousSearches"></ul>
       </div>
-      <script>
 
-    const apiKey = "6bc236fa8bd5e7e03f83fd8cea3eac74";
-    const cityForm = document.querySelector("#cityForm");
-    const cityInput = document.querySelector("#cityInput");
-    const weatherCard = document.querySelector("#weatherCard");
-    const cityName = document.querySelector("#cityName");
-    const countryName = document.querySelector("#countryName");
-    const weatherIcon = document.querySelector("#weatherIcon");
-    const weatherDesc = document.querySelector("#weatherDesc");
-    const temp = document.querySelector("#temp");
-    const humidity = document.querySelector("#humidity");
-    const error = document.querySelector("#error");
-    const previousSearches = document.querySelector("#previousSearches");
-    const liList = []
+      
+      <script>
+const apiKey = "6bc236fa8bd5e7e03f83fd8cea3eac74";
+const cityForm = document.querySelector("#cityForm");
+const cityInput = document.querySelector("#cityInput");
+const weatherCard = document.querySelector("#weatherCard");
+const cityName = document.querySelector("#cityName");
+const countryName = document.querySelector("#countryName");
+const weatherIcon = document.querySelector("#weatherIcon");
+const weatherDesc = document.querySelector("#weatherDesc");
+const temp = document.querySelector("#temp");
+const humidity = document.querySelector("#humidity");
+const error = document.querySelector("#error");
+const previousSearches = document.querySelector("#previousSearches");
 
 let cityWeatherData = {};
 
+// The script begins by declaring constants for the API key, the form element, 
+// the input element for the city, and various elements on the web page where the weather 
+// data will be displayed. A variable cityWeatherData is initialized to an empty object.
 
-        // Function to retrieve weather data from API
+
+// Function to retrieve weather data from API
 const getCityWeather = async (city) => {
   const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}`;
   try {
@@ -113,22 +118,9 @@ const saveCityWeatherData = () => {
   const li = document.createElement("li");
   li.textContent = cityWeatherData.name;
   previousSearches.appendChild(li);
-
-  li.addEventListener("click", () => {
-    const storedData = JSON.parse(localStorage.getItem(cityWeatherData.name));
-    if (storedData) {
-      console.log(localStorage.getItem(cityWeatherData.name))
-      console.log(cityWeatherData[0])
-      // Actualiza la interfaz de usuario con los datos almacenados en localStorage
-      // por ejemplo:
-      // cityNameElement.textContent = storedData.name;
-      // temperatureElement.textContent = storedData.temperature;
-      // ...
-   }//hise intento de harle click a la ciudad y q vuelva aparecer
-  })
-  
- 
 };
+
+
 
 // The function saveCityWeatherData takes no parameters and is called when valid weather data is 
 // retrieved from the API. This function saves the cityWeatherData object to the local storage of the 
@@ -156,6 +148,8 @@ cityForm.addEventListener("submit", async (e) => {
   }
 });
 
+
+
 // An event listener is added to the cityForm element to listen for when the user submits the form 
 // (by pressing the submit button or hitting the enter key). When the form is submitted, the event listener 
 // prevents the default form submission behavior, retrieves the value of the cityInput element, and 
@@ -166,34 +160,43 @@ cityForm.addEventListener("submit", async (e) => {
 // element is displayed on the web page. If the cityWeatherData object is falsy, the displayError function 
 // is called to display an error message.
 
-
+// Event listener for previous searches
+previousSearches.addEventListener("click", (e) => {
+  const li = e.target;
+  if (li.tagName === "LI") {
+    const city = li.textContent;
+    const data = JSON.parse(localStorage.getItem(city));
+    if (data) {
+      cityWeatherData = data;
+      displayWeatherData();
+      weatherCard.classList.remove("hide");
+    }
+  }
+});
 
 
 // Function to load previous search data
-// const loadPreviousSearchData = () => {
-//   Object.keys(localStorage).forEach((key) => {
-//     const data = JSON.parse(localStorage.getItem(key));
-//     const li = document.createElement("li");
-//     li.textContent = key;
-//     previousSearches.appendChild(li);
-//   });
-// };
+const loadPreviousSearchData = () => {
+  Object.keys(localStorage).forEach((key) => {
+    const data = JSON.parse(localStorage.getItem(key));
+    const li = document.createElement("li");
+    li.textContent = key;
+    previousSearches.appendChild(li);
+
+  });
+};
+
+loadPreviousSearchData();
 
 
 
-// loadPreviousSearchData();// parte de la solucion de apreta click en wheter pasado a ver como terminarlo
 
-// The script then defines a function getCityWeather 
-// that retrieves weather data from the OpenWeatherMap API. This function takes a city parameter, 
-// which is the name of the city for which the weather data is being requested. It constructs a URL 
-// for the API using the city parameter and the apiKey constant. It then uses the fetch function to make an 
-// HTTP GET request to the URL, and awaits the response. If the response is successful 
-// (with a HTTP status code of 200), the JSON data from the response is returned. If the response is not 
-// successful, an error is thrown.
-
+// Finally, the loadPreviousSearchData function is defined. This function iterates over the keys in the 
+// local storage object and retrieves the weather data for each key using JSON.parse(). It then creates 
+// a new list item element and sets its text content to the city name. The list item element is then 
+// appended to the previousSearches element on the web page.
 
       </script>
-
-
+    
 </body>
 </html>
