--- a/week10/day3/index.html
+++ b/week10/day3/index.html
@@ -231,7 +231,7 @@
 </script>
 
 
-<!-- USING EXTERNAL DATA WITH ASYNC AWAIT INSTEAD OF .THEN  -->
+USING EXTERNAL DATA WITH ASYNC AWAIT INSTEAD OF .THEN 
 
 <script>
     async function fetchData() {
@@ -250,7 +250,7 @@
     }
     
     fetchData();
-  </script> -->
+  </script>
 
 
 </script>
