--- a/week14/day5/hackathon2/index.html
+++ b/week14/day5/hackathon2/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="stylesheet" type="text/css" href="localhost">
+    <link rel="stylesheet" type="text/css" href="./style.css">// buscar clasname dentro del css
 
     <title>Hackathon</title>
 </head>
+
 <body style="margin-left: 100px; ">
 
     <h1 style="color: blue;" >INGRESA UN VEHICULO NUEVO</h1>
 
-    <form action="/send" method="POST" style="">
+    <form action="/send" method="POST">
         <label for="marca" style="display: block; margin-top: 20px; color: red;">MARCA:</label>
         <input type="text" name="marca" id="marca" style="margin-top: 20px; border: 1px solid gray; padding: 5px;"><br>
         <label for="modelo" style="display: block; margin-top: 20px; color: green;">MODELO:</label>
