--- a/week13/day5/miniProyect/index.html
+++ b/week13/day5/miniProyect/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
     <title>Shoping List</title>
 </head>
-<body>
+<body id="body">
     <h1>Shopping List</h1>
     <form action="/addItem" method="POST">
     <label for="item">item:</label>
